# canvas-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  elasticmq.conf  package-lock.json  package.json
.sqlx/: query-10525ebc8c159b382ef215ef4093c929a9aff0132db884aa33cb2a7736a4064a.json  query-5d3a8ac3ee71709c9d33016b84be1ce10691e70a234ccabe707dfc33702102d0.json
migrations/: 20240427020110_init.down.sql  20240427020110_init.up.sql
public/css/: main.css
src/: config.rs  lib.rs  main.rs  migrate.rs  models.rs  templates.rs
src/handlers/: health.rs  home.rs  mod.rs  newsletter.rs
src/storage/: database.rs  mod.rs  newsletter.rs
styles/: tailwind.css
templates/: base.html  index.html  newsletter_confirm.html  newsletter_confirmed.html  newsletter_thanks.html
