[package]
name = "canvas-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "canvas"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.82"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
fancy-regex = "0.13.0"
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
clap = { version = "4.4.7", features = ["env", "derive"] }
dotenv = "0.15.0"
rand = "0.8.5"
hex = "0.4.3"
